--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -5,13 +5,13 @@
       <figure class="MND Data Management">
         <a href="https://github.com/AfredTX/MND_Data_Management" target="_blank">
           <div class="phone">
-            <iframe src="https://github.com/AfredTX/MND_Data_Management/blob/main/Screenshot%20(7).png?raw=true" width="320" height="240"></iframe>
+            <iframe src="https://github.com/AfredTX/MND_Data_Management/blob/main/Screenshot%20(7).png" width="640" height="480"></iframe>
           </div>
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://github.com/AfredTX/MND_Data_Management" target="_blank">Fuel Economy Analysis</a>
+          <a href="https://github.com/AfredTX/MND_Data_Management" target="_blank">MND Data Management</a>
         </div>
         <p></p>
       </figcaption>
@@ -20,7 +20,7 @@
       <figure class="March Madness Bracket Assistant">
         <a href="https://github.com/AfredTX/MarchMadnessBracketAssistant" target="_blank">
           <div class="phone">
-            <iframe src="https://drive.google.com/file/d/1EjbCTCMEJjwPgFut0U6wGvq7u4P_yCcZ/preview" width="640" height="480"></iframe>
+            <iframe src="https://drive.google.com/file/d/1EjbCTCMEJjwPgFut0U6wGvq7u4P_yCcZ/preview" width="320" height="240"></iframe>
           </div>
         </a>
       </figure>
