--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -5,7 +5,7 @@
       <figure class="MND Data Management">
         <a href="https://github.com/AfredTX/MND_Data_Management" target="_blank">
           <div class="phone">
-            <iframe src="https://drive.google.com/file/d/1-m6np3JiOqMuRVw8QTPlJIAoUVppuaU-/view?usp=sharing" width="640" height="480"></iframe>
+            <iframe src="https://drive.google.com/file/d/1-m6np3JiOqMuRVw8QTPlJIAoUVppuaU-/view" width="640" height="480"></iframe>
           </div>
         </a>
       </figure>
