--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,10 +4,10 @@
     <!-- <p>I’ve picked up quite a few skills during the course of my three co-ops, and aim to improve these skills everyday. Here are a few of the technologies that I have experience with:</p> -->
     <div class="skillz">
       <div class="skillz__category">
-        <div class="skillz__category__label">Languages</div>
+        <div class="skillz__category__label">Expertise</div>
         <ul>
-          {% for language in site.data.skills.languages %}
-          <li class="skillz__category__item">{{language.item}}</li>
+          {% for expertise in site.data.skills.expertise %}
+          <li class="skillz__category__item">{{expertise.item}}</li>
           {% endfor %}
         </ul>
       </div>
