--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -19,19 +19,20 @@
           {% endfor %}
         </ul>
       </div>
-      <div class="skillz__category">
-        <div class="skillz__category__label">Frameworks & Methodologies</div>
-        <ul>
-          {% for framework in site.data.skills.frameworks %}
-          <li class="skillz__category__item">{{framework.item}}</li>
-          {% endfor %}
-        </ul>
-      </div>
+     
       <div class="skillz__category">
         <div class="skillz__category__label">Tools</div>
         <ul>
           {% for tool in site.data.skills.tools %}
           <li class="skillz__category__item">{{tool.item}}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="skillz__category">
+        <div class="skillz__category__label">Frameworks & Methods</div>
+        <ul>
+          {% for framework in site.data.skills.frameworks %}
+          <li class="skillz__category__item">{{framework.item}}</li>
           {% endfor %}
         </ul>
       </div>
