--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -29,7 +29,7 @@
         </ul>
       </div>
       <div class="skillz__category">
-        <div class="skillz__category__label">Frameworks & Methods</div>
+        <div class="skillz__category__label">Methodologies</div>
         <ul>
           {% for framework in site.data.skills.frameworks %}
           <li class="skillz__category__item">{{framework.item}}</li>
