--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -5,7 +5,7 @@
       <figure class="MND Data Management">
         <a href="https://github.com/AfredTX/MND_Data_Management" target="_blank">
           <div class="phone">
-            <iframe src="https://drive.google.com/file/d/1-m6np3JiOqMuRVw8QTPlJIAoUVppuaU-/preview" width="640" height="480"></iframe>
+            <iframe src="https://drive.google.com/file/d/1-m6np3JiOqMuRVw8QTPlJIAoUVppuaU-/preview" width="320" height="240"></iframe>
           </div>
         </a>
       </figure>
@@ -32,17 +32,17 @@
       </figcaption>
     </div>
 
-    <div class="Web Scraper">
-      <figure class="Web Scraper Project">
-        <a href="https://drive.google.com/open?id=1Rf1T21ADqDknmvi5MT4aLhj4_1L6Y_rx" target="_blank">
+    <div class="MANO Presentation">
+      <figure class="MANO Presentation">
+        <a href="https://www.youtube.com/watch?v=RW203BXvR0Q" target="_blank">
           <div class="phone">
-            <iframe src="https://drive.google.com/file/d/1toqXKzdhGRqYW2wJFa8wIsn18PnkUF_h/preview" width="320" height="240"></iframe>
+            <iframe src="https://www.youtube.com/watch?v=RW203BXvR0Q" width="320" height="240"></iframe>
           </div>
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://github.com/AfredTX/Business-Inteliigence-Report">Business Intelligence Report</a>
+          <a href="https://www.youtube.com/watch?v=RW203BXvR0Q">Developing Data Health & Maturity With Open-Source Technologies</a>
         </div>
         <p></p>
       </figcaption>
