--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -36,7 +36,7 @@
       <figure class="MANO Presentation">
         <a href="https://www.youtube.com/watch?v=RW203BXvR0Q" target="_blank">
           <div class="phone">
-            <iframe src="https://www.youtube.com/watch?v=RW203BXvR0Q" width="320" height="240"></iframe>
+            <iframe src="https://drive.google.com/file/d/1e1B17gJIdwx_XxJFceBc22l2joZJmfQm/preview" width="320" height="240"></iframe>
           </div>
         </a>
       </figure>
