--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,23 +2,33 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
-      I'm a recent graduate from
-      <a class="underline-link" href="https://www.thinkful.com/" target="_blank">Thinkful's</a> data analytics program where I developed the foundational skills of data science and programming. I graduated from 
-      <a class="underline-link" href="https://www.humboldt.edu/" target="_blank">Humboldt State University</a> with a degree in English and a focus on research writing and publishing as an editor of the 
-      <a class="underline-link" href="https://www.toyonliterarymagazine.org/" target="_blank">Toyon Literary Magazine</a>. As a member of the workforce I rose to a position of leadership in the hospitality industry at the 
-      <a class="underline-link" href="https://driskillhotel.com/" target="_blank">Driskill Hotel</a>, where I wrote and designed the menu to keep the 
-      <a class="underline-link" href="https://www.10best.com/awards/travel/best-hotel-bar-2019/" target="_blank">Driskill Bar</a> up to the highest standards and leading industry trends.
+      I'm a Philadelphia-based data & IT professional. I am currently the Data Development & Operations Manager at 
+      <a class="underline-link" href="https://mdnewdirections.org/" target="_blank">Maryland New Directions</a> (MND). Since 2020, I've helped MND automate 80% of its manual data collection and reporting processes by digitizing routine analog paperwork, streamlining employee data entry practices, introducing work management software and open-source technologies, and developing Python scripts to replace thousands of hours of redundant administrative work.
+    </p>
+    <p>
+      These technical advances have helped MND provide cost free industry training to more than 900 Baltimore area job seekers. I also work closely with the Grants Management Director to oversee RFP processes and integrate our data collection practices with the requirements of dozens of private, city, state, and federal grants. As an Operations Manager, I am responsible for guiding a team of 8 employees through the tasks needed to accomplish project and program goals and deliverables determined by our board of directors and funders.
+    </p>
+    <p>
+      In addition to my work at MND, I have served as a consultant to the 
+      <a class="underline-link" href="https://www.baltimorecivicfund.org/" target="_blank">Baltimore Civic Fund</a>. From May to December of 2022, I met weekly with a group of passionate nonprofit professionals to consult on the development of Baltimore's Workforce Integrated Data System (WIDS). Serving as the chief subject matter expert on data structures, I assisted the task force in completing and presenting a report for the 
+      <a class="underline-link" href="https://www.baltoworkforce.com/" target="_blank">Baltimore Workforce Development Board</a>. The presentation illustrated the benefits of WIDS, important data governance issues to consider before launch, and tools that could significantly benefit the platform to bridge the data divide between Baltimore City, nonprofits, funders, and beneficiaries.
+    </p>
+    <p>
+      In October of 2021 I was a featured presenter at 
+      <a class="underline-link" href="https://www.marylandnonprofits.org/" target="_blank">Maryland Nonprofits Annual Conference</a>. My presentation, 
+      <a class="underline-link" href="https://www.youtube.com/watch?v=RW203BXvR0Q" target="_blank">Developing Data Health & Maturity With Open-Source Technologies</a>, was a highlight of the Science & Technology portion of the conference. In my presentation, I illustrated how nonprofits could leverage open-source tools to improve and scale their data analysis capacity. The 1.25 CEU hours presentation included a live demonstration of Jupyter notebooks for on the fly data and statistical analysis.
+    </p>
+    <p>
+      Prior to my experience at MND, I graduated from 
+      <a class="underline-link" href="https://www.humboldt.edu/" target="_blank">Humboldt State University</a> with a degree in English, where I served as an editor for the 
+      <a class="underline-link" href="https://digitalcommons.humboldt.edu/toyon/" target="_blank">Toyon Literary Magazine. I am also a graduate of 
+      <a class="underline-link" href="https://www.thinkful.com/" target="_blank">Thinkful's</a> Immersive Data Analytics program, mastering the foundational skills of data management and programming. Most recently, I completed 
+      <a class="underline-link" href="https://www.credly.com/badges/12356834-9b50-4988-88f8-8267fb974a76/linked_in?t=ro2kl0" target="_blank">Google's Project Managment Certification</a> and have begun applying agile and lean methodology to my operations managment at MND.
+    </p>
+    <p>
+      In my free time, I'm making music, sifting through baseball stats, studying latin literature, and always leaning something new. I relocated to Philadelphia in 2021, and am thoroughly enjoying the city!
     </p>
 
-    <p>
-      Success in hospitality has motivated me to apply my talents to a new industry. My enthusiasm for research and design motivated me to develop marketable skills in Data Analytics. 
-      I enjoy the process of absorbing and analyzing complex concepts and information to ucover insights that promote efficiency and growth. I am excited to embark on a new career path where
-      I can help organizations make the most out of their data. I am passionate about my education and professional development, and look forward to growing more as a data scientist and programmer.
-    </p>
-
-    <p>
-      <strong>In my free time</strong>, I'm making music, sifting through MLB stats, or solving the latest bouldering problem at the rock gym.
-    </p>
     
     <p>
       I'd like to give credit and thanks to
