--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
   </h1>
 
   <h2 class="intro__tagline">I'm
-    <span class="name">Fred Randall</span>, I'm Fred Randall, a Data &amp; IT Operations Manager passionate about analysis, communications, and development.
+    <span class="name">Fred Randall</span>, I'm a Data &amp; IT Operations Manager passionate about analysis, communications, and development.
   </h2>
 
   <h3 class="intro__contact">
