--- a/_includes/background.html
+++ b/_includes/background.html
@@ -10,7 +10,7 @@
     </p>
     <p>
       In addition to my work at MND, I have served as a consultant to the 
-      <a class="underline-link" href="https://www.baltimorecivicfund.org/" target="_blank">Baltimore Civic Fund</a>. From May to December of 2022, I met weekly with a group of passionate nonprofit professionals to consult on the development of Baltimore's Workforce Integrated Data System (WIDS). Serving as the chief subject matter expert on data structures, I assisted the task force in completing and presenting a report for the 
+      <a class="underline-link" href="https://www.baltimorecivicfund.org/" target="_blank">Baltimore Civic Fund</a>. From May to December of 2022, I met weekly with a group of passionate nonprofit professionals to consult on the development of Baltimore's Workforce Integrated Data System (WIDS). Serving as the chief subject matter expert on data structures, I assisted the task force in completing a report for the 
       <a class="underline-link" href="https://www.baltoworkforce.com/" target="_blank">Baltimore Workforce Development Board</a>. The presentation illustrated the benefits of WIDS, important data governance issues to consider before launch, and tools that could significantly benefit the platform to bridge the data divide between Baltimore City, nonprofits, funders, and beneficiaries.
     </p>
     <p>
@@ -21,7 +21,7 @@
     <p>
       Prior to my experience at MND, I graduated from 
       <a class="underline-link" href="https://www.humboldt.edu/" target="_blank">Humboldt State University</a> with a degree in English, where I served as an editor for the 
-      <a class="underline-link" href="https://digitalcommons.humboldt.edu/toyon/" target="_blank">Toyon Literary Magazine. I am also a graduate of 
+      <a class="underline-link" href="https://digitalcommons.humboldt.edu/toyon/" target="_blank">Toyon Literary Magazine</a>. I am also a graduate of 
       <a class="underline-link" href="https://www.thinkful.com/" target="_blank">Thinkful's</a> Immersive Data Analytics program, mastering the foundational skills of data management and programming. Most recently, I completed 
       <a class="underline-link" href="https://www.credly.com/badges/12356834-9b50-4988-88f8-8267fb974a76/linked_in?t=ro2kl0" target="_blank">Google's Project Managment Certification</a> and have begun applying agile and lean methodology to my operations managment at MND.
     </p>
