--- a/_includes/background.html
+++ b/_includes/background.html
@@ -14,7 +14,7 @@
       <a class="underline-link" href="https://www.baltoworkforce.com/" target="_blank">Baltimore Workforce Development Board</a>. The presentation illustrated the benefits of WIDS, important data governance issues to consider before launch, and tools that could significantly benefit the platform to bridge the data divide between Baltimore City, nonprofits, funders, and beneficiaries.
     </p>
     <p>
-      In October of 2021 I was a featured presenter at 
+      In October 2021, I was a featured presenter at 
       <a class="underline-link" href="https://www.marylandnonprofits.org/" target="_blank">Maryland Nonprofits Annual Conference</a>. My presentation, 
       <a class="underline-link" href="https://www.youtube.com/watch?v=RW203BXvR0Q" target="_blank">Developing Data Health & Maturity With Open-Source Technologies</a>, was a highlight of the Science & Technology portion of the conference. In my presentation, I illustrated how nonprofits could leverage open-source tools to improve and scale their data analysis capacity. The 1.25 CEU hours presentation included a live demonstration of Jupyter notebooks for on the fly data and statistical analysis.
     </p>
