--- a/_includes/background.html
+++ b/_includes/background.html
@@ -19,8 +19,8 @@
       <a class="underline-link" href="https://www.youtube.com/watch?v=RW203BXvR0Q" target="_blank">Developing Data Health & Maturity With Open-Source Technologies</a>, was a highlight of the Science & Technology portion of the conference. In my presentation, I illustrated how nonprofits could leverage open-source tools to improve and scale their data analysis capacity. The 1.25 CEU hours presentation included a live demonstration of Jupyter notebooks for on the fly data and statistical analysis.
     </p>
     <p>
-      Prior to my experience at MND, I graduated from 
-      <a class="underline-link" href="https://www.humboldt.edu/" target="_blank">Humboldt State University</a> with a degree in English, where I served as an editor for the 
+      Prior to my experience at MND, I graduated with a degree in English from 
+      <a class="underline-link" href="https://www.humboldt.edu/" target="_blank">Humboldt State University</a>, where I served as an editor for the 
       <a class="underline-link" href="https://digitalcommons.humboldt.edu/toyon/" target="_blank">Toyon Literary Magazine</a>. I am also a graduate of  
       <a class="underline-link" href="https://www.thinkful.com/" target="_blank">Thinkful's</a> Immersive Data Analytics program, mastering the foundational skills of data management and programming. Most recently, I completed 
       <a class="underline-link" href="https://www.credly.com/badges/12356834-9b50-4988-88f8-8267fb974a76/linked_in?t=ro2kl0" target="_blank">Google's Project Managment </a> 
