--- a/_includes/background.html
+++ b/_includes/background.html
@@ -3,7 +3,7 @@
   <div class="section__content">
     <p>
       I'm a Philadelphia-based data & IT professional. I am currently the Data Development & Operations Manager at 
-      <a class="underline-link" href="https://mdnewdirections.org/" target="_blank">Maryland New Directions</a> (MND). Since 2020, I've helped MND automate 80% of its manual data collection and reporting processes by digitizing routine analog paperwork, streamlining employee data entry practices, introducing work management software and open-source technologies, and developing Python scripts to replace thousands of hours of redundant administrative work.
+      <a class="underline-link" href="https://mdnewdirections.org/" target="_blank">Maryland New Directions</a> (MND). Since 2020, I've helped MND automate 80% of its manual data collection and reporting processes by digitizing routine analog processes, streamlining employee data entry practices, introducing work management software and open-source technologies, and developing Python scripts to replace thousands of hours of redundant administrative work.
     </p>
     <p>
       These technical advances have helped MND provide cost free industry training to more than 900 Baltimore area job seekers. I also work closely with the Grants Management Director to oversee RFP processes and integrate our data collection practices with the requirements of dozens of private, city, state, and federal grants. As an Operations Manager, I am responsible for guiding a team of 8 employees through the tasks needed to accomplish project and program goals, producing deliverables determined by our board of directors and funders.
