--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -34,17 +34,18 @@
       </figcaption>
     </div>
     
-    <div class="March Madness Bracket Assistant">
-      <figure class="March Madness Bracket Assistant">
-        <a href="https://github.com/AfredTX/MarchMadnessBracketAssistant" target="_blank">
+    <div class="Baltimore Area Nonprofit Research">
+      <figure class="Baltimore Area Nonprofit Research">
+        <a href="https://github.com/AfredTX/propublica_nonprofit_api" target="_blank">
           <div class="phone">
-            <iframe src="https://drive.google.com/file/d/1EjbCTCMEJjwPgFut0U6wGvq7u4P_yCcZ/preview" width="320" height="240"></iframe>
+            <div class='tableauPlaceholder' id='viz1676997962272' style='position: relative'><noscript><a href='#'><img alt='Baltimore NPO dashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ba&#47;BaltimoreNPODashboard&#47;BaltimoreNPOdashboard&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='BaltimoreNPODashboard&#47;BaltimoreNPOdashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ba&#47;BaltimoreNPODashboard&#47;BaltimoreNPOdashboard&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1676997962272');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1427px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+            
           </div>
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://github.com/AfredTX/MarchMadnessBracketAssistant" target="_blank">March Madness Bracket Assistant</a>
+          <a href="https://github.com/AfredTX/propublica_nonprofit_api" target="_blank">Baltimore Area Nonprofit Research</a>
         </div>
         <p></p>
       </figcaption>
