--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -44,7 +44,7 @@
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://github.com/AfredTX/propublica_nonprofit_api" target="_blank">Baltimore Area Nonprofit Research</a>
+          <a href="https://github.com/AfredTX/propublica_nonprofit_api" target="_blank">Baltimore Area Nonprofit Research (GitHub Repository)</a>
         </div>
         <p></p>
       </figcaption>
